--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <h2>Corvus OS<br><span id="js-rotating">FEATURES, SPEEDY, SMOOTHNESS</span></h2>
                             <p class="p-large">First, it's inspired by Dirty Unicorns (thanks to Alex Cruz), but then we picked many other features too. Our objectives are a stable and feature ROM that can be enjoyed by many devices. We won't say that Corvus is better ROM than others, but we always try to give you the best.</p>
                             <a class="btn-solid-lg page-scroll" href="https://github.com/Corvus-ROM"><i class="fab fa-github"></i>Github</a>
-                            <a class="btn-solid-lg page-scroll" href="https://t.me/corvussupport"><i class="fab fa-telegram"></i>Telegram</a>
+                            <a class="btn-solid-lg popup-with-move-anim" href="#details-lightbox-1"><i class="fas fa-bullhorn"></i>What's new</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -247,7 +247,35 @@
     </div> <!-- end of slider-1 -->
     <!-- end of testimonials -->
     
-
+<!-- Details Lightboxes -->
+	<!-- Lightbox -->
+	<div id="details-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
+		<div class="row">
+			<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+			<div class="col-lg-6">
+				<img class="img-fluid" src="images/header-phone.png" alt="alternative">
+			</div>
+			<div class="col-lg-6">
+				<h3>Corvus OS</h3>
+				<hr>             
+				<h4>ROM Changelog v5.0</h4>				
+				<table>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>May security patch</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Force Expanded Notifications</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added color modes for edge lighting</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added pulse edge light for all doze triggers</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Percentage inside battery icon</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Synced battery icon in settings with status bar</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements art & bionic</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Disabled R-style headers by default</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Other fixes and improvements</td></tr>
+				</table>
+				<a class="btn-solid-reg1" href="https://t.me/CorvusUpdates">Update Channel</a> <a class="btn-outline-reg mfp-close as-button" href="#home">BACK</a> 
+			</div>
+		</div> <!-- end of row -->
+    </div> <!-- end of lightbox-basic -->
+    <!-- end of lightbox -->
+	
     <!-- Features -->
     <div id="features" class="tabs">
         <div class="container">
