--- a/index.html
+++ b/index.html
@@ -119,12 +119,6 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x"></i>
-                        <i class="fab fa-facebook-f fa-stack-1x"></i>
-                    </a>
-                </span>
-                <span class="fa-stack">
                     <a href="https://twitter.com/OsCorvus">
                         <i class="fas fa-circle fa-stack-2x"></i>
                         <i class="fab fa-twitter fa-stack-1x"></i>
@@ -144,7 +138,7 @@
                     <div class="col-lg-6">
                         <div class="text-container">
                             <h2>Corvus OS<br><span id="js-rotating">FEATURES, SPEEDY, SMOOTHNESS</span></h2>
-                            <p class="p-large">First, it's inspired by Dirty Unicorns (thanks to Alex Cruz), but then we picked many other features too. Our objectives are a stable and feature ROM that can be enjoyed by many devices. We won't say that Corvus is better ROM than others, but we always try to give you the best.</p>
+                            <p class="p-large">First, it's inspired by Dirty Unicorns (thanks to Alex Cruz), but then we picked many other features too. Our objective is stability while being feature-rich at the same time. We won't belive that Corvus is better ROM than others, but we will always try to give you the best.</p>
                             <a class="btn-solid-lg page-scroll" href="https://github.com/Corvus-ROM"><i class="fab fa-github"></i>Github</a>
                             <a class="btn-solid-lg popup-with-move-anim" href="#details-lightbox-1"><i class="fas fa-bullhorn"></i>What's new</a>
                         </div>
@@ -202,7 +196,7 @@
                                         <img class="card-image" src="images/genkzsz11.png" alt="alternative">
                                         <div class="card-body">
                                             
-                                            <p class="team-member">Genkzsz11 -  Founder</p>
+                                            <p class="team-member">Genkzsz11 - Founder</p>
                                         </div>
                                     </div>        
                                 </div> <!-- end of swiper-slide -->
@@ -779,35 +773,11 @@
                     <div class="footer-col last">
                         <h4>Social Media</h4>
                         <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
                             <a href="https://twitter.com/OsCorvus">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-google-plus-g fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-instagram fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                            </a>
-                        </span>
+			</span>	
                     </div> 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
