--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="jasmine_sprout.html"><span class="item-text">JASMINE SPROUT</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="vince.html"><span class="item-text">VINCE</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
