--- a/vince.html
+++ b/vince.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Raphael - Corvus OS - Downloads for Raphael</title>
+    <title>Vince - Corvus OS - Downloads for Vince</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -144,7 +144,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>RAPHAEL</h1>
+                    <h1>VINCE</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -158,7 +158,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Raphael</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Vince</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -173,19 +173,19 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
-                        <h3><i class="fa fa-user"></i>&nbsp;Ritzz<span class="blue"></span></h3>
+                        <h3><i class="fa fa-user"></i>&nbsp;MahmoudK1000<span class="blue"></span></h3>
                         <p class="p-large">																		
-							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/raphael.html"></iframe>
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/vince.html"></iframe>
 							<p></p>			
-						</p>				
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1371991"><i class="fa fa-2x fa-download"></i></a>&nbsp;
-                            <a class="btn-solid-reg" href="https://t.me/CorvusRaphael"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
-							<a class="btn-solid-reg" href="https://forum.xda-developers.com/showpost.php?p=82344481&postcount=76"><i class="fa fa-2x fa-globe"></i></a>							
+						</p>			
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1386955/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusVince"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/redmi-note-5/development/official-corvus-os-v5-0-t4104577"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/raphael.png" alt="alternative">
+                        <img class="img-fluid" src="images/vince.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
