--- a/index.html
+++ b/index.html
@@ -256,19 +256,19 @@
 			<div class="col-lg-6">
 				<h3>Corvus OS</h3>
 				<hr>             
-				<h4>ROM Changelog v5.5</h4>				
+				<h4>ROM Changelog v6.0</h4>				
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added 2 system themes Dark grey & Material ocean</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Switch style</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Power off QS Tile</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added new Bottom Navbar animation in Raven's Lair</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added reset for QS themes & switch style</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed setting lockscreen charging animation on boot</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in Launcher Themes</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in AOSP keyboard</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed pixel navigation bar</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed force expanded notifications feature</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Screenshot Delays</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>June security patch</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added hotspot setting to allow VPN upstreams</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added volume steps</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added back RGB accents</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added some more lockstyles</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Clear theme</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added support for pressed fod layer</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed google sans not applying</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in QS data usage</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Call Recording in Stock Dialer</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Other fixes and improvements</td></tr>
 				</table>
 				<a class="btn-solid-reg1" href="https://t.me/CorvusUpdates">Update Channel</a> <a class="btn-outline-reg mfp-close as-button" href="#home">BACK</a> 
 			</div>
