--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                 <div class="col-lg-12">
                     <h2>CONTACT</h2>
                     <ul class="list-unstyled li-space-lg">                        
-                        <li><i class="fab fa-telegram"></i><a class="blue" href="https://t.me/corvussupport">Support Group</a></li>                        
+                        <li><i class="fab fa-telegram"></i><a class="blue" href="https://t.me/CorvusCommunity">Support Group</a></li>                        
                         <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:oscorvus@gmail.com">Email us</a></li>
                     </ul>
                 </div> <!-- end of col -->
